Add Firebase deployment configuration and Cloud Functions

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,12 @@ Thumbs.db
 .vscode/
 .idea/
 npm-debug.log*
+
+# Firebase
+.firebase/
+firebase-debug.log
+firebase-debug.*.log
+.firebaserc
+serviceAccountKey.json
+ui-debug.log
+firestore-debug.log
